# HashedMLP

./: .gitignore  README.md  encodeAthena_wenda.py  pyproject.toml  setup.cfg  setup.py
dataset/: FastTensorLoader.py  FieldLoader.py  GridDataset.py
docker/: Dockerfile  requirements.txt
example/: encodeAthena.py  encodeAthena_lightning.py  encodeAthena_wenda.py  encodeCamel.py  encodeTifImage.py
finfc/: _configs.py  data.py  evaluate.py  models.py  prediction.py  preprocessing.py  properties.py  train.py  tune_single_interpolator.py  utils.py
finfc/conf/dataset/: athena.yaml  camels.yaml
model/: HashedMLP.py  __init__.py  _configs.py  data.py  models.py  train.py
notebook/model/: HashedMLP.py
slurm/: hashed_neural_field_athena.sh  hashed_neural_field_camels.sh
test/: testMultiLevelHashedMLP.py
tests/: test_hashed_neural_field.py  test_tiny_cuda_nn.py
