[metadata]
name = finfc
description = Flatiron Institute Neural Field Compression.
long_description = file: README.md
author = Kaze Wong, Wenda Zhou
license = BSD 3-Clause
version = 0.1.0

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude = tests

[options.package_data]
* = *.yaml
